syntax = "proto3";

option go_package = "./grpcInterface" ;

service OmcGreeter {
  rpc LoadFile (LoadFileRequest) returns (LoadFileReply) {}
  rpc GetPackageVersion (GetPackageVersionRequest) returns (GetPackageVersionReply) {}
  rpc ParseFile (ParseFileRequest) returns (ParseFileReply) {}
  rpc DeleteClass (DeleteClassRequest) returns (DeleteClassReply) {}
}
message DeleteClassRequest{
    string  packageName  =1;
}
message DeleteClassReply {
  bool deleteRes = 1;
}

message GetPackageVersionRequest {
  string packageName = 1;
}
message GetPackageVersionReply {
  string version = 1;
}

message LoadFileRequest{
  string packagePath = 1;
}
message LoadFileReply{
  bool  loadFileRes = 1;
}

message ParseFileRequest{
  string filePath = 1;
}
message ParseFileReply{
  string packageName = 1;
  bool parseRes = 2;
}